--- a/STaTool/STaTool.csproj
+++ b/STaTool/STaTool.csproj
@@ -12,12 +12,14 @@
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.104.2" />
     <PackageReference Include="Dapper.Contrib" Version="2.0.78" />
+    <PackageReference Include="EasyModbusTCP" Version="5.6.0" />
     <PackageReference Include="InputSimulator" Version="1.0.4" />
     <PackageReference Include="log4net" Version="3.0.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="OpenCvSharp4" Version="4.11.0.20250507" />
     <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.11.0.20250507" />
     <PackageReference Include="System.Data.SQLite" Version="1.0.119" />
+    <PackageReference Include="System.IO.Ports" Version="9.0.7" />
   </ItemGroup>
 
 </Project>
